Fix overflow hidden bug

--- a/src/components/organisms/navigation.module.scss
+++ b/src/components/organisms/navigation.module.scss
@@ -57,3 +57,7 @@
 		display: none;
 	}
 }
+
+.donateButton {
+	margin-bottom: 16px;
+}
